# OSC-Lighting-Controller

./: CMakeLists.txt  partitions.csv
main/: CMakeLists.txt  ads1115.c  ads1115.h  captive_portal.c  captive_portal.h  diag.c  diag.h  i2c_bus.c  i2c_bus.h  i2c_scan.c  i2c_scan.h  idf_component.yml  main.c  mcp23017.c  mcp23017.h  oled_display.c  oled_display.h  onyx.c  onyx.h  osc.c  osc.h  web_config.c  web_config.h  wifi_manager.c  wifi_manager.h
